[metadata]
name = danmaku-tools-jackieyang
version = 0.0.1
author = Jackie Yang
author_email = jackie@jackieyang.me
description = Process XML Danmaku File from BililiveRecorder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valkjsaaa/danmaku_tools
project_urls =
    Bug Tracker = https://github.com/valkjsaaa/danmaku_tools/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
scripts =
    src/danmaku_tools/cut_danmaku.py
    src/danmaku_tools/analyze_danmaku.py
    src/danmaku_tools/merge_danmaku.py
    src/danmaku_tools/cut_danmaku.py

[options.packages.find]