[metadata]
name = danmaku-tools
version = 0.0.5
author = Jackie Yang
author_email = jackie@jackieyang.me
description = Process XML Danmaku File from BililiveRecorder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valkjsaaa/danmaku_tools
project_urls =
    Bug Tracker = https://github.com/valkjsaaa/danmaku_tools/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib
    numpy
    scipy
    python-dateutil
    srt
    tqdm
    textrank4zh

[options.packages.find]
where = src
